# django-azure-active-directory-signin

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  SUPPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt  settings.conf  setup.cfg
.bash/: bash_alias.sh  install.sh  install_poetry.sh  launch.sh  pipenv.sh  pypi.sh  settings.conf  shell.sh  tests.sh  update.sh
.bash/incl/: .shebang.txt  _aliases.sh  _bash.sh  _colors.sh  _debug.sh  _homebrew.sh  _poetry_install.sh  _python.sh  _set.sh  _utils.sh  all.sh
.bash/osx/: bash_alias.sh  django.sh  install.sh  install_poetry.sh  launch.sh  poetry.sh  pypi.sh  requirements.sh  shell.sh  tests.sh  update.sh
.bash_old/: settings.conf
.bash_old/osx/: bash_alias.sh  install.sh  launch.sh  pypi.sh  requirements.sh
.env/: .env  aad.config.sample.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: ---bug_report.md  ---feature-request.md  bug_report.md  config.yml
.github/workflows/: codecov.yml  codeql-analysis.yml
.github/workflows/disabled/: push-actions.yml
azure_signin/: apps.py  backends.py  configuration.py  decorators.py  exceptions.py  handlers.py  middleware.py  urls.py  utils.py  views.py
demo/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
demo/backend/: django_auth_adfs.py
demo/templates/: content.html  layout.html
demo/templates/auth/: auth-bar-items.html  status.html  token.html
docs/: README.md  _config.yml  index.md
docs/_includes/: banner-custom.html
docs/_includes/common/: links.liquid  opengraph.liquid
docs/_includes/rest/: script.liquid
docs/_includes/templates/: sidebar.liquid  toctree.liquid
docs/_layouts/: default.html
docs/assets/css/: style.scss
docs/assets/js/: toctree.js
docs_v1/: _config.yml  index.md
docs_v1/_includes/: banner-custom.html
docs_v1/assets/css/: style.scss
docs_v2/_includes/common/: opengraph.liquid
docs_v2/_includes/rest/: script.liquid
docs_v2/_includes/templates/: sidebar.liquid
ms_identity_web/: README.md  __init__.py  adapters.py  configuration.py  context.py  errors.py
ms_identity_web/django/: adapter.py  middleware.py  msal_views_and_urls.py
tests/: conftest.py  settings.py  test_decorators.py  test_middleware.py  test_views.py  urls.py
user/: admin.py  models.py
user/migrations/: 0001_initial.py  0002_extendeduser_id_token_claims.py
