[tool.poetry]
name = "django-azure-active-directory-signin"
version = "0.2.4"
description = "Sign-in users to your Django Web app with Azure Active Directory."
authors = ["JV conseil <contact@jv-conseil.net>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/JV-conseil-Internet-Consulting/django-azure-active-directory-signin"
repository = "https://github.com/JV-conseil-Internet-Consulting/django-azure-active-directory-signin"
documentation = "https://jv-conseil-internet-consulting.github.io/django-azure-active-directory-signin/"
keywords = [
    "authentication",
    "azure-active-directory",
    "azure",
    "django",
    "microsoft-azure",
    "microsoft",
    "ms-identity",
    "msal-python",
    "msal",
    "oauth2",
    "openid-connect",
    "openidconnect",
    "signin",
]
classifiers = [
    "Framework :: Django",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
]
packages = [
    {include = "azure_signin"},
]

[tool.poetry.dependencies]
django = ">=4.*,<5.0"
msal = ">=1.18.0"
# python = ">=3.9.*,<3.11"
python = ">=3.9.16"

[tool.poetry.dev-dependencies]
black = ">=22.12.0"
coverage = {extras = ["toml"], version = ">=7.0.5"}
django-sslserver = ">=0.22"
flake8 = ">=6.0.0"
flake8-isort = ">=6.0.0"
mixer = ">=7.2.2"
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
pytest-django = ">=4.5.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/JV-conseil-Internet-Consulting/django-azure-active-directory-signin/issues"
"Twitter" = "https://twitter.com/JVconseil"
"Stack Overflow" = "https://stackoverflow.com/users/2477854/jv-conseil"
"Donate" = "https://www.paypal.com/donate/?hosted_button_id=P3DGL6EANDY96"
"Sponsor" = "https://github.com/sponsors/JV-conseil"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = ["django"]

[tool.pytest.ini_options]
addopts = "--cov . -v --cov-report=html"
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py",  "*_tests.py"]

[tool.coverage.run]
include = ["azure_signin/*"]
omit = [
    "*/tests/*",
    "*/tests*",
    "*/migrations/*",
    "*__init__*",
    ]
branch = true
disable_warnings = ["include-ignored"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
show_missing = true
include = ["azure_signin/*"]
omit = [
    "*/tests/*",
    "*/tests*",
    "*/migrations/*",
    "*__init__*",
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
